<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.operational.QrScannerActivity">

    <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/scannerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:autoFocusButtonColor="@color/white"
        app:autoFocusButtonVisible="true"
        app:flashButtonColor="@color/white"
        app:flashButtonVisible="false"
        app:frameAspectRatioHeight="1"
        app:frameAspectRatioWidth="1"
        app:frameColor="@color/white"
        app:frameCornersRadius="20dp"
        app:frameCornersSize="50dp"
        app:frameSize="0.75"
        app:frameThickness="2dp"
        app:maskColor="#77000000"
        app:layout_constraintBottom_toTopOf="@id/cardScanInfo"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_flash_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:backgroundTint="@color/semi_transparent"
        app:tint="@color/white"
        app:borderWidth="0dp"
        app:elevation="2dp"
        android:contentDescription="@string/toggle_flash"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardScanInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_large">

            <ImageView
                android:id="@+id/ivScanIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_qr_scan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/primary" />

            <TextView
                android:id="@+id/tvScanTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:text="@string/scan_qr_title"
                android:textColor="@color/textPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivScanIcon"
                app:layout_constraintTop_toTopOf="@id/ivScanIcon" />

            <TextView
                android:id="@+id/tvScanDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/scan_qr_description"
                android:textColor="@color/textSecondary"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivScanIcon"
                app:layout_constraintTop_toBottomOf="@id/tvScanTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>